Fix: Overflow in Navbar by Making Table Scrollable (To avoid overflow)
Optimize the code by implementing the style globally

--- a/src/assets/styles/_overflow.scss
+++ b/src/assets/styles/_overflow.scss
@@ -19,3 +19,9 @@ body {
 .overflow-scroll {
   overflow: scroll;
 }
+
+.table-container {
+  overflow-x: auto;
+  max-width: 100%;
+}
+
